Entity'ler oluşturuldu. Yeni entity'ler, repository'ler ve IManager eklendi. MenuItem ismi Category olarak değiştirildi.

--- a/YemekSiparişProjesi-KatmanlıMimari.Business/YemekSiparişProjesi-KatmanlıMimari.Business.csproj
+++ b/YemekSiparişProjesi-KatmanlıMimari.Business/YemekSiparişProjesi-KatmanlıMimari.Business.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Abstractions\" />
+    <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.DataAccess\YemekSiparişProjesi-KatmanlıMimari.DataAccess.csproj" />
+    <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.Entites\YemekSiparişProjesi-KatmanlıMimari.Entites.csproj" />
   </ItemGroup>
 
 </Project>
