--- a/YemekSiparişProjesi-KatmanlıMimari.DataAccess/YemekSiparişProjesi-KatmanlıMimari.DataAccess.csproj
+++ b/YemekSiparişProjesi-KatmanlıMimari.DataAccess/YemekSiparişProjesi-KatmanlıMimari.DataAccess.csproj
@@ -11,4 +11,17 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.Entites\YemekSiparişProjesi-KatmanlıMimari.Entites.csproj" />
+  </ItemGroup>
+
 </Project>
