--- a/YemekSiparişProjesi-KatmanlıMimari.UI/YemekSiparişProjesi-KatmanlıMimari.UI.csproj
+++ b/YemekSiparişProjesi-KatmanlıMimari.UI/YemekSiparişProjesi-KatmanlıMimari.UI.csproj
@@ -10,7 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -18,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.Business\YemekSiparişProjesi-KatmanlıMimari.Business.csproj" />
+    <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.DataAccess\YemekSiparişProjesi-KatmanlıMimari.DataAccess.csproj" />
     <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.Entites\YemekSiparişProjesi-KatmanlıMimari.Entites.csproj" />
   </ItemGroup>
 
