--- a/YemekSiparişProjesi-KatmanlıMimari.UI/YemekSiparişProjesi-KatmanlıMimari.UI.csproj
+++ b/YemekSiparişProjesi-KatmanlıMimari.UI/YemekSiparişProjesi-KatmanlıMimari.UI.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MaterialSkin.2" Version="2.3.1" />
+    <PackageReference Include="MaterialSkin2DotNet" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -26,6 +28,21 @@
     <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.Business\YemekSiparişProjesi-KatmanlıMimari.Business.csproj" />
     <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.DataAccess\YemekSiparişProjesi-KatmanlıMimari.DataAccess.csproj" />
     <ProjectReference Include="..\YemekSiparişProjesi-KatmanlıMimari.Entites\YemekSiparişProjesi-KatmanlıMimari.Entites.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
