--- a/YemekSiparişProjesi-KatmanlıMimari.UI/YemekSiparişProjesi-KatmanlıMimari.UI.csproj
+++ b/YemekSiparişProjesi-KatmanlıMimari.UI/YemekSiparişProjesi-KatmanlıMimari.UI.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="WinForms.DataVisualization" Version="1.10.0" />
   </ItemGroup>
 
   <ItemGroup>
